Fix navbar crowded on tablet

--- a/src/index.css
+++ b/src/index.css
@@ -1065,8 +1065,8 @@ h6 {
 
   @media (min-width: 641px) and (max-width: 1024px) {
     .navbar-dark {
-      padding: 12px 16px;
-      gap: 16px;
+      padding: 10px 12px;
+      gap: 8px;
     }
   }
 
